--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,6 @@ dependencies {
     implementation "com.google.android.material:material:1.1.0-alpha05"
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.infideap.drawerbehavior:drawer-behavior:0.1.5'
+    implementation 'com.android.volley:volley:1.1.0'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
 }
