--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     package="com.example.introapp">
 
     <dist:module dist:instant="true" />
-
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -14,7 +14,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning">
-        <activity android:name=".LoginActivity" />
+        <activity android:name=".Tabs.TabbedView" />
+        <!--  <activity android:name=".LoginActivity" />
+        -->
         <activity
             android:name=".WelcomeActivity"
             android:screenOrientation="portrait"
@@ -29,8 +31,8 @@
             android:name=".MainActivity"
             android:label="@string/app_name" />
         <activity
-        android:name=".MainDrawerActivity"
-        android:label="@string/app_name" />
+            android:name=".MainDrawerActivity"
+            android:label="@string/app_name" />
     </application>
 
 </manifest>
