Material Design with AndroidX.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        tools:ignore="AllowBackup,GoogleAppIndexingWarning">
+        tools:ignore="AllowBackup,GoogleAppIndexingWarning,InnerclassSeparator">
         <activity android:name=".Tabs.TabbedView" />
-        <!--  <activity android:name=".LoginActivity" />
-        -->
+        <activity android:name=".LoginActivity" />
         <activity
             android:name=".WelcomeActivity"
             android:screenOrientation="portrait"
