--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,9 @@ android {
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
+
     }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -18,6 +20,8 @@ android {
         }
     }
 }
+
+
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -30,5 +34,6 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.infideap.drawerbehavior:drawer-behavior:0.1.5'
     implementation 'com.android.volley:volley:1.1.0'
-    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
 }
